@@ -1,3 +1,8 @@
+2004-11-20  Bruno Haible  <bruno@clisp.org>
+
+	* clos-class3.lisp (defclass): Warn about a syntax error that beginners
+	often do.
+
 2004-11-24  Bruno Haible  <bruno@clisp.org>
 
 	Support heaps > 4 GB.
